--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@
 
 .l-wrap {
   width: 100vw;
+  margin: 0;
+  padding: 0;
 }
 
 .l-header {
@@ -137,7 +139,7 @@
     position: absolute;
     z-index: 2;
     margin: 0 5%;
-    top: 16vh;
+    top: 17vh;
     width: 90%;
     height: 90vh;
   }
