--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,17 +73,17 @@
 .p-titlePC {
   display: block;
   margin: 0 auto;
-  height: 68px;
+  height: 70px;
 }
 
 .p-titleMB {
   display: block;
   margin: 0 auto;
-  height: 100px;
+  height: 120px;
 }
 
 .p-meritPC {
-  margin: 32px 40px 0;
+  margin: 32px 44px 0 36px;
 }
 
 .p-meritPC__img {
@@ -105,6 +105,58 @@
 
 .p-meritMB__img {
   width: 100%;
+}
+
+.p-curriPC {
+  margin: 0 20px;
+}
+
+.p-curriMB {
+  padding-top: 10px;
+}
+
+.p-curriMB__img {
+  width: 100%;
+}
+
+.p-planMB {
+  margin: 32px 16px 0;
+}
+
+.p-planWrap {
+  width: 100%;
+}
+
+.p-planWrap__img {
+  width: 100%;
+  height: auto;
+}
+
+.p-planTop {
+  position: relative;
+  z-index: 2;
+  top: 0;
+  width: 100%;
+  height: 60.42%;
+}
+
+.p-planBtm {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 39.58%;
+}
+
+.p-planMB__topBtn {
+  position: absolute;
+  bottom: 40vh;
+  width: 85%;
+}
+
+.p-planMB__btn {
+  position: absolute;
+  bottom: 0;
+  width: 85%;
 }
 
 @media only screen and (min-width: 768px) {
