--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -38,6 +38,7 @@ button{
   cursor: pointer;
   outline: none;
   padding: 0;
+  margin: 0;
   appearance: none;
 }
 
@@ -50,9 +51,11 @@ a {
   text-decoration: none;
 }
 
-ul {
+ul,
+li {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 input, textarea, select {
