--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,43 @@
 }
 
 .p-curriMB__img {
-  width: 100%;
+  width: 100vw;
+}
+
+.p-otherTitlePC {
+  display: block;
+  margin: 0 auto;
+  padding-top: 20px;
+  height: 94px;
+}
+
+.p-planTitleMB {
+  display: block;
+  margin: 0 auto;
+  padding-top: 20px;
+  height: 80px;
+}
+
+.p-planPC {
+  margin: 32px auto;
+}
+
+.p-planPC ul {
+  display: flex;
+  justify-content: center;
+  margin-right: 0;
+}
+
+.p-planPC ul li {
+  margin-right: 8px;
+}
+
+.p-planPC ul li:last-child {
+  margin-right: 0;
+}
+
+.p-planWrapPC {
+  position: relative;
 }
 
 .p-planMB {
@@ -124,39 +160,121 @@
 }
 
 .p-planWrap {
-  width: 100%;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.p-planWrap:last-child {
+  margin-bottom: 0;
+}
+
+.p-planPCImg {
+  width: auto;
+  height: 1100px;
 }
 
 .p-planWrap__img {
-  width: 100%;
+  display: block;
+  margin: 0 auto;
+  width: auto;
+  height: 1100px;
+}
+
+.p-planTopPC {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
   height: auto;
 }
 
-.p-planTop {
-  position: relative;
+.p-planBtmPC {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  height: auto;
+}
+
+.p-planTopPC__topBtn {
   z-index: 2;
-  top: 0;
-  width: 100%;
-  height: 60.42%;
+  position: absolute;
+  bottom: 486px;
+  width: 300px;
+}
+
+.p-planBtmPC__btn {
+  z-index: 2;
+  display: block;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 52px;
+  width: 300px;
+}
+
+.p-planTop {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  height: auto;
 }
 
 .p-planBtm {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  height: 39.58%;
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  height: auto;
 }
 
 .p-planMB__topBtn {
+  z-index: 2;
   position: absolute;
-  bottom: 40vh;
-  width: 85%;
+  bottom: 486px;
+  width: 300px;
 }
 
 .p-planMB__btn {
+  z-index: 2;
+  display: block;
+  margin: 0 auto;
   position: absolute;
-  bottom: 0;
-  width: 85%;
+  bottom: 52px;
+  width: 300px;
+}
+
+@media only screen and (max-width: 1019px) {
+  .p-planPCImg {
+    width: auto;
+    height: 900px;
+  }
+
+  .p-planTopPC {
+    display: block;
+    margin: 0 auto;
+    width: 250px;
+    height: auto;
+  }
+  
+  .p-planBtmPC {
+    display: block;
+    margin: 0 auto;
+    width: 250px;
+    height: auto;
+  }
+  
+  .p-planTopPC__topBtn {
+    z-index: 2;
+    position: absolute;
+    bottom: 406px;
+    width: 250px;
+  }
+  
+  .p-planBtmPC__btn {
+    z-index: 2;
+    display: block;
+    margin: 0 auto;
+    position: absolute;
+    bottom: 50px;
+    width: 250px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
