--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,28 @@
+#loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 555;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+#loader .txt {
+  font-size: 45px;
+  font-weight: bold;
+  color: rgb(30, 50, 93);
+}
+
+.loaded {
+  opacity: 0;
+  visibility: hidden;
+}
+
 .pc-only {
   margin: 0;
   padding: 0;
