--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,5 +1,5 @@
 html {
-  font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "游ゴシック", YuGothic, sans-serif;
+  font-family: “Hiragino Sans W3”, “メイリオ”, Meiryo, sans-serif;
   -webkit-text-size-adjust: 100%;
   font-size: 62.5%;
   box-sizing: border-box;
@@ -14,7 +14,6 @@ html {
 }
 
 body {
-  font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "游ゴシック", YuGothic, sans-serif;
   -webkit-text-size-adjust: 100%;
   font-size: 1.6rem;
   overflow-x: hidden;
